created header draft to get an idea

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="header">
         <img class="logo"src="/images/logo.png" alt="cannabis leaf">
-        <ul>
-            <li><a>Link 1</a></li>
-            <li><a>Link 2</a></li>
-            <li><a>Link 3</a></li>
+        <ul class="link-list">
+            <li class="header-list-item"><a href="https://github.com/mellowchellooo">My GitHub</a></li>
+            <li class="header-list-item"><a href="">Link 2</a></li>
+            <li class="header-list-item"><a href="">Link 3</a></li>
         </ul>
 
 
