cleaned up some of the boxes and added more containers for content. starting to gain a better understanding of how to use flex

--- a/index.html
+++ b/index.html
@@ -8,14 +8,26 @@
 </head>
 <body>
     <div class="header">
+        <div class="logo-box">
         <img class="logo"src="/images/logo.png" alt="cannabis leaf">
+        <p>a logo</p>
+        </div>
         <ul class="link-list">
             <li class="header-list-item"><a href="https://github.com/mellowchellooo">My GitHub</a></li>
             <li class="header-list-item"><a href="">Link 2</a></li>
             <li class="header-list-item"><a href="">Link 3</a></li>
         </ul>
+    </div>
+    <div class="hero-box">
+        <div class="hero-content">
+            <h1>This website is awesome</h1>
+            <p>This is a description with smaller text and stuff but umm click this button below :)</p>
+            <button class="sign-up">sign up!</button>
+        </div>
+        <div class="picture-placeholder">
+            hero placehlder
 
-
+        </div>
     </div>
     
 </body>
