finished landing page rough draft. added call to action section, and footer.

--- a/index.html
+++ b/index.html
@@ -64,9 +64,23 @@
     </div>
     <!--this is where the last section goes before footer-->
     <div>
-        <div class="call to action">
-            <button class="sign-up">sign up!</button>
+        <div class="call-to-action">
+            <div class="sign-up-box">
+               <div class="cta-txt"> 
+                <h4>Call to action muhhfuckaa</h4>
+                <p class="call-to-para">this is text callin to some muhhfuckin action</p>
+               </div>
+                <div class="button-box">
+                    <button class="sign-up">sign up!</button>
+                </div>    
+            </div>    
         </div>
+    </div>
+
+    <!--this is the footer-->
+    <div class="footer">
+        <p class="footer-para">Copyright &copy; Mellow Chellooo 2025 </p>
+
     </div>
         
     
